@@ -4,7 +4,6 @@ MANIFEST
 Makefile.PL
 t/pod.t
 t/00-load.t
-t/mem_leak.t
 t/manifest.t
 t/copy_fail.t
 t/base_tests.t
@@ -15,6 +14,7 @@ t/subtree_assign.t
 t/force_case_bug_fix.t
 t/base_tests_multi_obj.t
 t/base_tests_for_objcopy.t
+t/base_tests_for_mem_leak.t
 lib/XML/Smart.pm
 lib/XML/Smart/Tutorial.pod
 lib/XML/Smart/Parser.pm
