@@ -5,6 +5,7 @@ Revision history for Perl extension XML::Smart.
     - Fixed object copy bug 34695
     - Updated POD to reflect where obj copy is not supported.
     - Fixed object Deep copy bug ( bug id 56806 ) 
+    - Fixed Mem leak and added tests.
 
 1.71  2013-1-26
     - Updated all pm to use strict and warnings
